Add intro to 'Sketching' section

--- a/Application-of-Derivatives-P.2/main.tex
+++ b/Application-of-Derivatives-P.2/main.tex
@@ -67,15 +67,14 @@
 
 \chapter{Application of Derivatives Part One}
 
-
-
-\vspace*{-10mm}
+\vspace*{-20mm}
 
 \section{Sketching}\index{Sketching}
 
-As
+\vspace*{-7mm}
 
-\noindent\textbf{Example 1:}
+It is important to sketch out the function in the question to reveal all of its qualities (increasing/decreasing intervals, concave up/down, inflection points, etc).
+
 
 \begin{center}
 
