Fix name to Part One

--- a/Application-of-Derivatives-P.1/main.tex
+++ b/Application-of-Derivatives-P.1/main.tex
@@ -74,7 +74,7 @@
 \vspace*{-7mm}
 
 It is important to sketch out the function in the question to reveal all of its qualities (increasing/decreasing intervals, concave up/down, inflection points, etc).
-
+There is an algorithm to 
 
 \begin{center}
 
