Add nested items - will need for later

--- a/Application-of-Derivatives-P.1/main.tex
+++ b/Application-of-Derivatives-P.1/main.tex
@@ -74,11 +74,20 @@
 \vspace*{-7mm}
 
 It is important to sketch out the function in the question to reveal all of its qualities (increasing/decreasing intervals, concave up/down, inflection points, etc).
-There is an algorithm to 
+There is an algorithm to determine all of the details of the graph.
 
-\begin{center}
 
-\end{center}
+\begin{enumerate}
+    \item From the original graph:
+          \begin{itemize}
+              \item You must first \textbf{factor} to check if any \textbf{holes} are in the graph.
+              \item State \textbf{VA's} and \textbf{Domain}.
+              \item Find the \textbf{end behaviour}.
+              \item Look at the behaviour near \textbf{zeros} (x-intercepts) and \textbf{VA's}. (Remember - do this by looking at multiplicities of zeros)
+              \item *CAN BE SKIPPED* - Find \textbf{postive and negative intervals} between zeros and VA's.
+          \end{itemize}
+\end{enumerate}
+
 
 %----------------------------------------------------------------------------------------
 
