Add starting steps for Example 1

--- a/Application-of-Derivatives-P.1/main.tex
+++ b/Application-of-Derivatives-P.1/main.tex
@@ -47,6 +47,7 @@
 \input{structure.tex} % Insert the commands.tex file which contains the majority of the structure behind the template
 
 \usepackage{multicol, wrapfig}
+\graphicspath{{./Pictures/}}
 
 
 \hypersetup{pdftitle={ApplicationofDerivativesPartOne}pdfauthor={Joshua Bautista}}
@@ -63,7 +64,7 @@
 %	CHAPTER 1
 %----------------------------------------------------------------------------------------
 
-\chapterimage{InequalitiesHeading.png} % Chapter heading image
+\chapterimage{VelAccelPic.JPG} % Chapter heading image
 
 \chapter{Application of Derivatives Part One}
 
@@ -81,9 +82,10 @@ There is an algorithm to determine all of the details of the graph.
           \begin{itemize}
               \item You must first \textbf{factor} to check if any \textbf{holes} are in the graph.
               \item State \textbf{VA's} and \textbf{Domain}.
+              \item Find the \textbf{x and y intercepts}.
               \item Find the \textbf{end behaviour}.
               \item Look at the behaviour near \textbf{zeros} (x-intercepts) and \textbf{VA's}. (Remember - do this by looking at multiplicities of zeros)
-              \item *CAN BE SKIPPED* - Find \textbf{postive and negative intervals} between zeros and VA's.
+              \item *CAN BE SKIPPED* - Find \textbf{positive and negative intervals} between zeros and VA's.
           \end{itemize}
 
           \vspace*{4mm}
@@ -104,12 +106,54 @@ There is an algorithm to determine all of the details of the graph.
           \end{itemize}
 \end{enumerate}
 
+\pagebreak
+
+\noindent \textbf{Example 1:}
+
+\vspace*{4mm}
+
+\noindent Sketch and label all intercepts, asymtotes, crticial points and inflection points. Show all justifying steps.
+
+\vspace*{2mm}
+
+{\large $y=(x^\frac{1}{3})(x-4)$}
+
+\vspace*{4mm}
+
+\noindent \textbf{1.} Cannot be factored any further. \textbf{$\therefore$ no holes, or VA's. Domain $x \in \Re$} \\
+
+\vspace*{-2mm}
+
+\noindent \textbf{1.} Find x and y intercepts.
+
+\vspace*{-4mm}
+
+\begin{multicols}{2}
+    \begin{center}
+        \underline{x-intercept} \\
+        $0=(x^\frac{1}{3})(x-4)$\\
+        by property of zeros: \\
+        \textbf{$\therefore (0, 0)$ and $(4, 0)$}
+
+        \columnbreak
+
+        \underline{y-intercept} \\
+        $y=((0)^\frac{1}{3})((0)-4)$ \\
+        $y=(0)(-4)$ \\
+        $y=0$ \\
+        \textbf{$\therefore (0, 0)$}
+        \columnbreak
+    \end{center}
+\end{multicols}
+
 
 %----------------------------------------------------------------------------------------
 
 \section{Velocity and Acceleration}\index{Notation}
 
-Before we start doing problems involving velocity and acceleration, we must make sure we know these key definitions:
+\includegraphics[scale=0.4]{VelAccelPic.JPG}
+
+\noindent Before we start doing problems involving velocity and acceleration, we must make sure we know these key definitions:
 
 \vspace*{2mm}
 
@@ -121,25 +165,32 @@ Displacement is the \textbf{change in position} of an object. It is concerned wi
 
 \end{center}
 
-\vspace*{3mm}
+\vspace*{2mm}
 
 \noindent{\large\textbf{Velocity}} \\
+Velocity is speed over time.
 
 \begin{center}
     {\large $Velocity = v(t) = \frac{ds}{dt} = \frac{\Delta s}{\Delta t}$}
 
 \end{center}
 
-\vspace*{3mm}
+\vspace*{2mm}
 
 \noindent{\large\textbf{Acceleration}} \\
+Acceleration is concerned
+
+\begin{center}
+    negative acceleration $\to$ decreasing velocity. \\
+    position acceleration $\to$ increasing velocity.
+\end{center}
 
 \begin{center}
     {\large $Acceleration = a(t) = \frac{d^2v}{dt^2}$}
 
 \end{center}
 
-\vspace*{3mm}
+\vspace*{2mm}
 
 \noindent{\large\textbf{Jerk/Turbulence:}} \\
 
@@ -148,8 +199,7 @@ Displacement is the \textbf{change in position} of an object. It is concerned wi
 \end{center}
 
 
-\vspace*{3mm}
-
+\vspace*{2mm}
 
 
 %----------------------------------------------------------------------------------------
