--- a/Application-of-Derivatives-P.1/main.tex
+++ b/Application-of-Derivatives-P.1/main.tex
@@ -108,25 +108,25 @@ There is an algorithm to determine all of the details of the graph.
 
 \pagebreak
 
-\noindent \textbf{Example 1:}
+\noindent {\large \textbf{Example 1:}}
 
-\vspace*{4mm}
+\vspace*{3mm}
 
 \noindent Sketch and label all intercepts, asymtotes, crticial points and inflection points. Show all justifying steps.
 
-\vspace*{2mm}
+\vspace*{3mm}
 
 {\large $y=(x^\frac{1}{3})(x-4)$}
 
-\vspace*{4mm}
+\vspace*{3mm}
 
 \noindent \textbf{1.} Cannot be factored any further. \textbf{$\therefore$ no holes, or VA's. Domain $x \in \Re$} \\
 
-\vspace*{-2mm}
-
-\noindent \textbf{1.} Find x and y intercepts.
-
 \vspace*{-4mm}
+
+\noindent \textbf{1.} Find x and y intercepts:
+
+\vspace*{-2mm}
 
 \begin{multicols}{2}
     \begin{center}
@@ -145,6 +145,47 @@ There is an algorithm to determine all of the details of the graph.
         \columnbreak
     \end{center}
 \end{multicols}
+
+\noindent \textbf{1.} Find end behaviour: The function is not rational/exponential. $\therefore$ no HA/OA.
+
+\vspace*{2mm}
+
+\noindent \textbf{2.} Find critical points: Find $y'$ (first derivative) and find when it is equal to 0 or DNE.
+
+\vspace*{-2mm}
+
+\begin{center}
+    $y = (x^\frac{1}{3})(x-4)$ \\
+    \vspace*{2mm}
+    $y' = (x^\frac{1}{3})(1) + (x-4)(\frac{1}{3})(x^\frac{-2}{3})$ \\
+    \vspace*{1mm}
+    $= (x^\frac{-2}{3})[x+\frac{1}{3}(x-4)]$ \\
+    \vspace*{1mm}
+    $= (x^\frac{-2}{3})[x+\frac{(x-4)}{3}]$ \\
+    \vspace*{1mm}
+    $= (x^\frac{-2}{3})(\frac{3x+x-4}{3})$ \\
+    \vspace*{1mm}
+    {\large $= \frac{4(x-1)}{3x^\frac{2}{3}}$}
+    \vspace*{1mm}
+\end{center}
+
+\begin{multicols}{2}
+    \begin{center}
+        $0= \frac{4(x-1)}{3x^\frac{2}{3}}$ \\
+        \vspace*{1mm}
+        $0 = 4(x-1)$ \\
+        \vspace*{1mm}
+        $\therefore$ critical pt. $x = 1$
+        \columnbreak
+
+        DNE when denominator = 0 \\
+        \vspace*{1mm}
+        $0 = 3x^\frac{2}{3}$ \\
+        \vspace*{1mm}
+        $\therefore$ critical pt. $x = 0$
+    \end{center}
+\end{multicols}
+
 
 
 %----------------------------------------------------------------------------------------
