--- a/Application-of-Derivatives-P.1/main.tex
+++ b/Application-of-Derivatives-P.1/main.tex
@@ -186,7 +186,19 @@ There is an algorithm to determine all of the details of the graph.
     \end{center}
 \end{multicols}
 
+\noindent \textbf{3.} Find possible inflection points: Find $y''$ and find when it is equal to 0 or DNE.
 
+\vspace*{-6mm}
+
+\begin{center}
+    $y' = x^\frac{1}{3} + \frac{1}{3}(x)^\frac{-2}{3}(x-4)$ \\
+    \vspace*{2mm}
+    $y'' = \frac{1}{3}(x)^\frac{-2}{3} + \frac{1}{3}[(x)^\frac{-2}{3}(1)+(x-4)(\frac{-2}{3}(x)^\frac{-5}{3})]$ \\
+    \vspace*{1mm}
+    $= \frac{1}{3}(x)^\frac{-5}{3}[(x) + (x) + (x-4)(\frac{-2}{3})]$ \\
+    \vspace*{1mm}
+    $=$
+\end{center}
 
 %----------------------------------------------------------------------------------------
 
