Sketching derivative examples

--- a/Application-of-Derivatives-P.1/main.tex
+++ b/Application-of-Derivatives-P.1/main.tex
@@ -447,12 +447,60 @@ When looking at displacement, velocity, acceleration, and jerk graphs, there are
 
 \noindent {\large \textbf{Sketching the Derivative/Anti-Derivative Graphs}}
 
+\begin{multicols}{3}
+    \hspace*{-10mm}
+    \includegraphics[scale=0.2]{displacementpng.png}
+    \columnbreak
+    \hspace*{10mm}
+    \includegraphics[scale=0.06]{displace-vel.jpg}
+
+    \columnbreak
+    \begin{enumerate}[label=(\alph*)]
+        \item Constant velocity of $-2\frac{m}{s}$. \hspace*{-3mm} Object going left.
+        \item Constant velocity of $5\frac{m}{s}$. \hspace*{-2mm} Object going right.
+        \item Constant velocity of $0\frac{m}{s}$. \hspace*{-3mm} Object staying still.
+        \item Constant velocity of $-5\frac{m}{s}$. \hspace*{-3mm} Object going left.
+    \end{enumerate}
+
+\end{multicols}
+
+
 \begin{multicols}{2}
-    \includegraphics[scale=0.23]{displacementpng.png}
+    \includegraphics[scale=0.7]{velocity.jpg} \\
+    (zeros become t.p and t.p become inflection pt) \\
+    \begin{center}
+        \includegraphics[scale=0.05]{vel-displace.jpg}
+        \begin{enumerate}[label=(\alph*)]
+            \item NOTE: We do not know where the object starts. The object first moves away from the origin, then switches direction and moves toward the origin speeding up.
+        \end{enumerate}
+
+    \end{center}
     \columnbreak
 
-    
+    \hspace*{-20mm}
 
+    \begin{center}
+        \includegraphics[scale=0.05]{vel-displace.jpg}
+        \begin{enumerate}[label=(\alph*)]
+            \item NOTE: We do not know where the object starts. The object first moves away from the origin, then switches direction and moves toward the origin speeding up.
+            \item The object slows down, still moving away from the origin, until it switches direction once again.
+            \item Object speeds up while moving away from the origin.
+            \item Object is moving at a constant rate away from the origin.
+        \end{enumerate}
+
+    \end{center}
+
+
+\end{multicols}
+
+\pagebreak
+
+\begin{multicols}{2}
+    \includegraphics[scale=0.7]{acceleration.jpg}
+    \columnbreak
+
+    \includegraphics[scale=0.05]{accel-vel.jpg}
+    \includegraphics[scale=0.05]{accel-jerk.jpg}
 \end{multicols}
 
 %----------------------------------------------------------------------------------------
