Finished sketching section

--- a/Application-of-Derivatives-P.1/main.tex
+++ b/Application-of-Derivatives-P.1/main.tex
@@ -498,16 +498,16 @@ When looking at displacement, velocity, acceleration, and jerk graphs, there are
 \pagebreak
 
 \begin{multicols}{2}
-   \includegraphics[scale=0.7]{acceleration.jpg} \\
-    (zeros become t.p and t.p become inflection pt) \\
+    \includegraphics[scale=0.7]{acceleration.jpg} \\
     \begin{center}
-        
+
         \includegraphics[scale=0.05]{accel-vel.jpg}
         \begin{enumerate}[label=(\alph*)]
-            \item Constant negative acceleration (decreasing velocity).
-            \item Constant positive acceleration (increasing velocity).
-            \item Larger constant positive acceleration.
-            \item 0 acceleration (constant velocity).
+            \item Object is speeding up at a constant acceleration going away from the origin (negative acceleration).
+            \item Object speeds up very quickly, now at a positive acceleration.
+            \item Object is speeding up at a constant acceleration going towards the origin (positive acceleration).
+            \item Objects slows down very quickly, now at a negative acceleration.
+            \item Object is speeding up at a constant acceleration going away from the origin (negative acceleration).
         \end{enumerate}
 
     \end{center}
@@ -516,14 +516,9 @@ When looking at displacement, velocity, acceleration, and jerk graphs, there are
     \hspace*{-20mm}
 
     \begin{center}
-        \vspace*{3mm}
-        \includegraphics[scale=0.05]{accel-jerk.jpg}
-        \begin{enumerate}[label=(\alph*)]
-            \item NOTE: We do not know where the object starts. The object first moves away from the origin, then switches direction and moves toward the origin speeding up.
-            \item The object slows down, still moving away from the origin, until it switches direction once again.
-            \item Object speeds up while moving away from the origin.
-            \item Object is moving at a constant rate away from the origin.
-        \end{enumerate}
+        \vspace*{10mm}
+        \includegraphics[scale=0.05]{accel-jerk.jpg} \\
+        The derivative or 'rate of change' of acceleration in this case are all constant 0 (no slope in original acceleration graph), except where the acceleration drastically increases/decreases.
 
     \end{center}
 \end{multicols}
